Fix spacing and bedio

--- a/source/scss/_common.scss
+++ b/source/scss/_common.scss
@@ -64,8 +64,8 @@ a:hover {
   padding-bottom: 70px;
 
   &-sm {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   &-lg {
@@ -79,7 +79,7 @@ a:hover {
   }
 
   &-title {
-    margin-bottom: 30px;
+    margin-bottom: 70px;
   }
 }
 
